objects/CMPL123__Association_Setup__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Related_List_Object__c</fullName>
        <label>Related List Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Search_Parameters_Fields__c</fullName>
        <label>Search Parameters Fields</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Search_Results_Fields__c</fullName>
        <label>Search Results Fields</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Object_fields__c</fullName>
        <label>Target Object Fields</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Association Setup</label>
    <pluralLabel>Association Setup</pluralLabel>
</CustomObject>